--- a/public/stylesheets/codecademy/ArticleShift.css
+++ b/public/stylesheets/codecademy/ArticleShift.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/reader/bg.png');
+  background-image: url('https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/reader/bg.png');
   -webkit-background-size: cover;
      -moz-background-size: cover;
        -o-background-size: cover;
