--- a/views/codecademy/FlipBoard.ejs
+++ b/views/codecademy/FlipBoard.ejs
@@ -17,6 +17,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--Custom CSS-->
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link rel="stylesheet" href='/stylesheets/codecademy/flipBoard.css'>
     <!-- Latest compiled and minified JavaScript -->
     <!--JQuery-->
@@ -26,6 +27,94 @@
     <script src='/bower_components/angular/angular.min.js'></script>
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-flipboard">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src='https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/logo.png'></a>
+        </div>
+    
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Get the App</a></li>
+            <li><a href="#">Tutorials</a></li>
+            <li><a href="#">Magazines</a></li>
+            <li><a href="#">Web tools</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Careers</a></li>
+             <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Our Blog</a></li>
+                <li><a href="#">Maps Blog</a></li>
+                <li><a href="#">Eng Blog</a></li>
+                <li><a href="#">Advertisers</a></li>
+                <li><a href="#">Publishers</a></li>
+                <li><a href="#">About Us</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <h1>Flipboard Is Your Personal Magazine</h1>
+              <p>It's a single place to discover, collect and share the news you care about.  Add your favorite social networks, publications and blogs to stay connected to the topics and people closest to you.</p>
+              
+              <ul class="list-unstyled list-inline">
+                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
+                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
+                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
+                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
+              </ul>
+            </div><!--End of slide copy-->
+            <div class="col-xs-12 col-sm-6">
+              <img class='slider-img' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/home.png">
+            </div><!--End of slide-img-->
+          </div><!--End of row-->
+        </div><!--End of container--> 
+    </div>
+    <div class="item">
+      <img src="..." alt="...">
+      <div class="carousel-caption">
+        
+      </div>
+    </div>
+    
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!--Custom-->
+<script src='/javascripts/codecademy/flipBoard.js'></script>
   </body>
 </html>
