--- a/views/codecademy/FlipBoard.ejs
+++ b/views/codecademy/FlipBoard.ejs
@@ -65,56 +65,87 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6">
+    <div class='slider'>
+      <div class='container-fluid'>
+        <div class='slide active-slide'>
+          <div class='row'>
+            <div class='col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2'>
               <h1>Flipboard Is Your Personal Magazine</h1>
               <p>It's a single place to discover, collect and share the news you care about.  Add your favorite social networks, publications and blogs to stay connected to the topics and people closest to you.</p>
-              
-              <ul class="list-unstyled list-inline">
-                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
-                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
-                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
-                <li><a href="#"><img class='magBTN' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
+              <ul class="list-unstyled list-inline btn-store">
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
               </ul>
-            </div><!--End of slide copy-->
-            <div class="col-xs-12 col-sm-6">
-              <img class='slider-img' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/home.png">
-            </div><!--End of slide-img-->
+            </div><!--End of col-xs-12-->
+            <div class='col-xs-12 col-sm-6 col-lg-4'>
+              <img class='center-block slide-img' src='https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/home.png'/>
+            </div><!--End of col-xs-12-->
           </div><!--End of row-->
-        </div><!--End of container--> 
-    </div>
-    <div class="item">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        
-      </div>
-    </div>
-    
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!--Custom-->
-<script src='/javascripts/codecademy/flipBoard.js'></script>
+        </div><!--End of slide-->
+        <div class='slide feature'>
+          <div class='row'>
+            <div class='col-xs-12 text-center'>
+             <img class='center-block slide-img featureWM' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/cnn.png">
+            </div><!--End of col-xs-12-->
+            <div class='col-xs-12 text-center featureInfo'>
+              <a href="#">Read Now</a>
+            </div><!--End of col-xs-12-->
+          </div><!--End of row-->
+        </div><!--End of feature-->
+        <div class='slide'>
+          <div class='row'>
+            <div class='col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2 slide-copy'>
+              <h1>Enjoy Flipboard Magazines</h1>
+              <h2>on the Web</h2>
+              <p>Millions of people use Flipboard to read and collect the news they care about, curating their favorite stories into their own magazines on any topic imaginable. Now magazines created by our readers, from Dali to End Trafficking, can be shared and enjoyed on the Web by anyone, anywhere.</p>
+            </div><!--End of col-xs-12-->
+            <div class='col-xs-12 col-sm-6 col-lg-4 text-center'>
+              <img class='center-block slide-img' src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/magazines.png">
+            </div><!--End of col-xs-12-->
+          </div><!--End of row-->
+        </div><!--End of slide-->
+        <div class='slide'>
+          <div class='row'>
+            <div class='col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2'>
+              <h1>Badges & Widgets</h1>
+              <p>Millions of people use Flipboard to read and collect the news they care about, curating their favorite stories into their own magazines. Now you can promote the ones you create or think are awesome.</p>
+              <ul class="list-unstyled list-inline btn-store">
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ios.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/android.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/windows.png"></a></li>
+                <li><a href="#"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/blackberry.png"></a></li>
+              </ul>
+            </div><!--End of col-xs-12-->
+            <div class='col-xs-12 col-sm-6 col-lg-4'>
+              <img class='center-block slide-img' src='https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/bw.png'/>
+            </div><!--End of col-xs-12-->
+          </div><!--End of row-->
+        </div><!--End of slide-->
+      </div><!--End of container--fluid-->
+    </div><!--End of slider-->
+    <div class='slider-nav'>
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='col-xs-2 text-center'>
+            <a href="#" class="arrow-prev"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
+          </div><!--End of col-xs-2-->
+          <div class='col-xs-8 text-center'>
+            <ul class="list-unstyled list-inline slider-dots">
+              <li class="dot active-dot">&bull;</li>
+              <li class="dot">&bull;</li>
+              <li class="dot">&bull;</li>
+              <li class="dot">&bull;</li>
+            </ul>
+          </div><!--End of col-xs-2-->
+          <div class='col-xs-2 text-center'>
+            <a href="#" class="arrow-next"><img src="https://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
+          </div><!--End of col-xs-2-->
+        </div><!--End of row-->
+      </div><!--End of container--fluid-->
+    </div><!--End of slider-nav-->
+    <!--Custom-->
+    <script src='/javascripts/codecademy/flipBoard.js'></script>
   </body>
 </html>
