--- a/public/stylesheets/freecodecamp/calculator.css
+++ b/public/stylesheets/freecodecamp/calculator.css
@@ -41,6 +41,10 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   margin-bottom:12px;
 }
 
+#plusButton{
+    padding:30px 0px;
+}
+
 *:focus, *:active {
   outline:none !important;
 }
