--- a/views/freecodecamp/Simon.ejs
+++ b/views/freecodecamp/Simon.ejs
@@ -45,15 +45,17 @@
                     </div><!--End of count-->
                 </div><!--End of col-xs-3-->
                 <div class='col-xs-6 col-sm-2 col-md-2 col-lg-1 interface'>
-                    <button class='btn btn-default btn-block btn-success'>Start</button>
-                    <button class='btn btn-default btn-block btn-primary'>Reset</button>
-                    <button class='btn btn-default btn-block btn-danger'>Strict</button>
+                    <button  class='btn btn-default btn-block btn-success' onclick='startGame();'>Start</button>
+                    <button  class='btn btn-default btn-block btn-primary'>Reset</button>
+                    <button  class='btn btn-default btn-block btn-danger' onclick='toggleStrict(classList);'>Strict</button>
                 </div><!--End of col-xs-3-->
                 <div class='col-xs-3 col-sm-2 col-md-1 col-lg-1 interface'>
-                    <i class="fa fa-unlock-alt fa-2x" aria-hidden="true"></i> 
+                    <i id='lock' class="fa fa-2x fa-unlock-alt" aria-hidden="true"></i> 
                 </div><!--End of col-xs-3-->
             </div><!--End of row-->
         </div><!--End of container-->
     </div><!--End of gameDiv-->
+    <!--Custom-->
+    <script src='/javascripts/freecodecamp/simon.js'></script>
   </body>
 </html>
