--- a/views/freecodecamp/Simon.ejs
+++ b/views/freecodecamp/Simon.ejs
@@ -33,10 +33,10 @@
                 <div class='col-xs-12 col-sm-6 col-md-8 col-lg-7 col-lg-offset-1'>
                     <div class='gameContainer'>
                         <div class="center"></div>
-                            <a href="" id="0" class="field blue"></a>
-                    		<a href="" id="1" class="field yellow "></a>
-                    		<a href="" id="2" class="field red"></a>
-                    		<a href="" id="3" class="field green"></a> 
+                            <a href="#" id="1" onclick='recordUserChoice(1);' class="field blue"></a>
+                    		<a href="#" id="2" onclick='recordUserChoice(2);' class="field yellow "></a>
+                    		<a href="#" id="3" onclick='recordUserChoice(3);' class="field red"></a>
+                    		<a href="#" id="4" onclick='recordUserChoice(4);' class="field green"></a> 
                         </div><!--End of gameContainer--> 
                 </div><!--End of col-xs-12-->
                 <div class='col-xs-3 col-sm-2 col-md-1 col-lg-1 interface text-center'>
@@ -46,7 +46,7 @@
                 </div><!--End of col-xs-3-->
                 <div class='col-xs-6 col-sm-2 col-md-2 col-lg-1 interface'>
                     <button  class='btn btn-default btn-block btn-success' onclick='startGame();'>Start</button>
-                    <button  class='btn btn-default btn-block btn-primary'>Reset</button>
+                    <button  class='btn btn-default btn-block btn-primary' onclick='reset();'>Reset</button>
                     <button  class='btn btn-default btn-block btn-danger' onclick='toggleStrict(classList);'>Strict</button>
                 </div><!--End of col-xs-3-->
                 <div class='col-xs-3 col-sm-2 col-md-1 col-lg-1 interface'>
